--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             href="https://img.icons8.com/nolan/25/parse-from-clipboard.png">
         <title>Analista de datos</title>
         <link rel="stylesheet" href="css/index.css">
-        <link rel="stylesheet" href="css/tablet_index.css" media="screen and (min-width: 720px)">
+        <link rel="stylesheet" href="css/tablet_index.css" media="screen and (min-width: 640px)">
+        <link rel="stylesheet" href="css/index_desktop.css" media="screen and (min-width: 800px)">
         <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Redressed&family=Roboto:wght@100&display=swap" rel="stylesheet">
     </head>
 
@@ -30,7 +31,7 @@
         <section class="sect-img-hello">
             <section class="hello">
                 <h1>Hola, Soy <strong>Nicoll Idaly</strong></h1>
-                <h2>Tecnologo en telecomunicaciones y estudiante análisis de datos</h2>
+                <h2>Tecnólogo en telecomunicaciones y estudiante análisis de datos</h2>
             </section>
             
             <picture class="portada">
@@ -62,11 +63,12 @@
                 <span><a href="#" alt="download-cv">Descargar CV</a></span>
             </section>        
         </section>
+        <section class="information">
         <section class="about-me">
             <h2>Acerca de mí</h2>
             <p>Soy Nicoll, estudiante de analisis de datos, con diplomado en programación y codificación
                de la universidad Javeriana.
-               Me encanta el desarrollo de software y crear código util para solucionar diferente problemas.
+               Me encanta el desarrollo de software y crear código util para solucionar diferentes problemas.
             </p><p>
                Pienso que la tecnología no tiene límite.
             </p><p class="frase-platzi">
@@ -75,7 +77,7 @@
         </section>
         <section class="education">
             <h2>Educación</h2>
-            <h4 class="what-learn">¿Qué he aprendido?</h4>
+            <h2 class="what-learn">¿Qué he aprendido?</h2>
             <ul>
                 <li>
                     <h3>Carrera Ingeligencia Artificial</h3>
@@ -97,21 +99,22 @@
             <h2>Premios</h2>
             <p>Mejor aprendiz del área Tecnologo en Telecomunicaciones</p>
         </section>
+        </section>
+        <section class="proyectos">
+            <h2>Proyectos</h2>
+        </section>
         <section class="skills">
             <h2>Habilidades y lenguajes</h2>
             <label><span>Análisis de datos</p><progress max="100" value="45"></progress></span></label>
             <label><span>Github</p> <progress max="100" value="75" ></progress></span></label>
             <label><span>Python</p> <progress max="100" value="65" ></progress></span></label>
             <label><span>Lenguaje R</p> <progress max="100" value="40" ></progress></span></label>
-            <label><span>HTML y CSS</p><progress max="100" value="45" ></progress></span></label>
-            <label><span>Network </p><progress max="100" value="80" ></progress></span></label>
+            <label><span>HTML y CSS</p><progress max="100" value="50" ></progress></span></label>
+            <label><span>Network, IP, routing</p><progress max="100" value="80" ></progress></span></label>
             <label><span>Linux</p> <progress max="100" value="70" ></progress></span></label>
             <label><span>Virtualización</p><progress max="100" value="80" ></progress></span></label>
             <label><span>English</p> <progress max="100" value="60"></progress></span></label>
             <label><span>Español</p> <progress max="100" value="80"></progress></span></label>
-        </section>
-        <section class="proyectos">
-            <h2>Proyectos</h2>
         </section>
         <section  class="form-content">
             <h2>Dejame un mensaje</h2>
