--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <span class="main_name">&lt;Nicoll Idaly /&gt;</span>
 
             <ul class="main-nav-mobile">
-                <li><a href="index.html" alt="home"><img src="https://img.icons8.com/ios-filled/75/000000/home.png"/></a></li>
-                <li><a href="#" alt="portafolio"><img src="https://img.icons8.com/material/75/000000/briefcase--v1.png"/></a></li>
-                <li><a href="capacitaciones.html"alt="CERTIFICATIONS"><img src="https://img.icons8.com/ios-glyphs/75/000000/course-assign.png"/></a></li>
-                <li><a href="contact.html" alt="contact"><img src="https://img.icons8.com/ios-filled/75/000000/business-contact.png"/></a></li>
+                <li><a href="index.html" alt="home"><img src="https://img.icons8.com/ios-filled/75/000000/home.png"  alt="home"/></a></li>
+                <li><a href="#" alt="portafolio"><img src="https://img.icons8.com/material/75/000000/briefcase--v1.png" alt="portafolio"/></a></li>
+                <li><a href="capacitaciones.html"alt="CERTIFICATIONS"><img src="https://img.icons8.com/ios-glyphs/75/000000/course-assign.png" alt="CERTIFICATIONS"/></a></li>
+                <li><a href="#form" alt="contact"><img src="https://img.icons8.com/ios-filled/75/000000/business-contact.png" alt="contact"/></a></li>
             </ul>
         </header>
         <main>
@@ -35,18 +35,19 @@
             </section>
             
             <picture class="portada">
-                <source media="(min-width:1300px)" srcset="https://uca5e69ebecdfdff9a1a6258105d.previews.dropboxusercontent.com/p/thumb/ABBtKOyLC5YcmaD_jPYSmfJISa-dSAe26hdpA8bOJYCcJXpwPL12YIHV3k_jC9idHrRtBUBLDsSgHiGMf9-dITu_gS8dPMUvuTPJgFhnNRMCQGqWXOsybnIY-wPP4OVDbKtNmhEX2OnzXPUg1FrewZ603Yy33s0VBKuAMmNnARH4j0n4T_3QHKz8UDGGeXxLF_YJ4D0fBUVwcpTkzN3kNZo-GFecWsHjxNL-vKWLC7S-jwq3Xtodb7rhLQguac09wP_f8StUyj1yWiNdyVFd43wEucQXq6680vf_ztod0elK1wAX6HAuAbo2ybXU1HTNuM7pL7HINX32jj7ifxbTy45-SBGc2lrofg4XXG0q5uAQZwUm_M6Ds-wTMUuDVxuJcpCyziUu7USlZziRozOEeZg6/p.jpeg?fv_content=true&size_mode=5">
-                <source media="(min-width:650px)" srcset="https://uce6463541a49b171080287ec05a.previews.dropboxusercontent.com/p/thumb/ABCTHQq-Q0iPe4hKKKDhwuo6mv1miDxdP_IEBJL_zye0o5GNuO3ZXLuWpkfmetg2N-1uS4k7rR3CIdMw0XVTozhlpL7aYEIosJ3mKabP5XWA40cmKozhLFyz_iDjwpPHMoLgWsd6xLrWMsWoDBdH7rv5ifztHaUk-cdFz_Jt-WccP6WpBriNPeos4qhPgBH6RCI7upa0S4pLatkKmSO_Bmb1D7vXr5QjzUKUSkgON02blqs8el1rd5cOmOc3SyVLLrSiFRBNe20wtJomQNG1d2VLtEcbevqdGQUuG4tf1dZ7f2_EMgrKBjCfJSbPp2zYLV_o1BVEFEtD7Hn3u_ZKhrJpRgb80J65UaU002fgNznE7FheOZFNn16OK2o2ASSmg2T1TkrdqYvNighAFEcSLqKB/p.jpeg?fv_content=true&size_mode=5">
-                <img src="https://ucd491c7d62f1dc5f0c23af58cfc.previews.dropboxusercontent.com/p/thumb/ABD-nBFZEXPFwQXQLUF6h6ZhrCQEyF45flS92QsMwrkheEBH0_ZKC1kjtSTo3qNTAWGNxy-iy_kOhPokXXifnFDjFbNaWivBl2PRHebfs-mgRXhxjgUB4nFkJxu1gi_19I84MmffWZzFOfmQxQeRXd8-NIGFvXjN9VDHKwBg0cnChxOcbme7g0k0smrUxHNN3cRW7L2Wi8vcJuF9INt6A9Ud3detoLgYQ1PUqHNX16L1yreEU0qrfSBsc6G18lg-ZL_FOAMjOzO3Z3VI1mMVrfG8OnqVUKGMaUWY97g9zBXF3_ETcLFtRmAPcBUt3wZdM_Iso3NcEWg1nL9_gT-4qRVAzCKPS9oXef4t__S4z6I9FlJHMvnpu3IXcbQ5W0t86LZyhoYAWm1NzsaavfNc1kLI/p.jpeg?fv_content=true&size_mode=5"
-             alt="portada_programación">
+                    <source media="(min-width:1300px)" src="images/portada-big.jpg">
+                <source media="(min-width:650px)" src="images/portada-medium.jpg">
+                <img src="images/portada-small.jpg"  alt="portada_programación">
             </picture>
         </section>
         <section class="photo_redes">
-            <figure class="photo_profile">
+            <picture class="photo_profile">
+                <source media="(min-width:1000px" src="images/perfil-big.png">
+                <source media="(min-width:650px)" src="images/perfil-medium.png">
                 <img
-                    src = "https://i.pinimg.com/236x/ee/92/70/ee9270767cf6770010b8a9db489468d6--monna-lisa-leonardo.jpg"
-                    alt="profile"> <!-- src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2018/08/fotos-perfil-whatsapp_16.jpg?itok=aqeTumbO" -->
-            </figure>
+                    src = "images/perfil-small.png"
+                    alt="profile"> 
+            </picture>
             <figure class="redes">
                     <a title="Gmail" href="mailto:nianmejia16@gmail.com">
                         <img src="https://img.icons8.com/ios-filled/90/000000/composing-mail.png"
@@ -118,7 +119,7 @@
         </section>
     </main>
     <footer>
-        <section  class="form-content">
+        <section  id="form"class="form-content">
             <h2>Dejame un mensaje</h2>
             <form action="">
                 <label for="nombre">
