--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         </section>
         <section class="photo_redes">
             <picture class="photo_profile">
-                <source media="(min-width:1000px" src="images/perfil-big.png">
-                <source media="(min-width:650px)" src="images/perfil-medium.png">
+                <source media="(min-width:1000px" src="images/profil-big.png">
+                <source media="(min-width:650px)" src="images/profil-medium.png">
                 <img
-                    src = "images/perfil-small.png"
+                    src = "images/profil-small.png"
                     alt="profile"> 
             </picture>
             <figure class="redes">
