--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="sect-img-hello">
             <section class="hello">
                 <h1>Hola, Soy <strong>Nicoll Idaly</strong></h1>
-                <h2>Tecnólogo en telecomunicaciones y estudiante análisis de datos</h2>
+                <h2>Tecnólogo en telecomunicaciones y estudiante de análisis de datos</h2>
             </section>
             
             <picture class="portada">
@@ -47,6 +47,7 @@
                     src = "images/profile-medium.jpg"
                     alt="profile"> 
             </picture>
+            <section class="redes-cv">
             <figure class="redes">
                     <a title="Gmail" href="mailto:nianmejia16@gmail.com">
                         <img src="https://img.icons8.com/ios-filled/90/000000/composing-mail.png"
@@ -61,7 +62,7 @@
             </figure>
             <section class="down-button">
                 <span><a href="#" alt="download-cv">Descargar CV</a></span>
-            </section>        
+            </section></section>    
         </section>
         <section class="information">
         <section class="about-me">
