Cambio de portada , se arregla bugs y añade borders

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,14 +34,14 @@
             </section>
             
             <picture class="portada">
-                    <source media="(min-width:1300px)" src="images/portada-big.jpg">
-                <source media="(min-width:650px)" src="images/portada-medium.jpg">
+                <source media="(min-width:1000px)" srcset="images/portada-big.jpg">
+                <source media="(min-width:650px)" srcset="images/portada-medium.jpg">
                 <img src="images/portada-small.jpg"  alt="portada_programación">
-            </picture>
+                            </picture>
         </section>
         <section class="photo_redes">
             <picture class="photo_profile">
-                <source media="(min-width:1000px" src="images/profile-big.jpg">
+                <source media="(min-width:600px" srcset="images/profile-big.jpg">
                 <img
                     src = "images/profile-medium.jpg"
                     alt="profile"> 
