Se añade javascript

--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
         <section class="skills">
             <h2>Habilidades y lenguajes</h2>
             <label><span>Análisis de datos</p><progress max="100" value="45"></progress></span></label>
-            <label><span>Github</p> <progress max="100" value="75" ></progress></span></label>
+            <label><span>Git / Github</p> <progress max="100" value="75" ></progress></span></label>
+            <label><span>JAVA</p> <progress max="100" value="20" ></progress></span></label>
+            <label><span>Javacript</p> <progress max="100" value="40" ></progress></span></label>
             <label><span>Python</p> <progress max="100" value="65" ></progress></span></label>
             <label><span>Lenguaje R</p> <progress max="100" value="40" ></progress></span></label>
             <label><span>HTML y CSS</p><progress max="100" value="50" ></progress></span></label>
