--- a/[Michel Prieto] - Main.html
+++ b/[Michel Prieto] - Main.html
@@ -281,8 +281,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
 
 <meta http-equiv="Pragma" content="no-cache">
-<link rel="shortcut icon" href="https://10.120.121.3/200715.1626/favicon.ico">
-<link href="https://10.120.121.3/200715.1626/style.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 
 .graph-border {
@@ -306,7 +304,7 @@
 
 
 
-<form action="https://10.120.121.3/througput.cgi" method="GET">
+<form  method="GET">
 <table id="throughput">
 	<tfoot>
 		<tr>
