Update [Michel Prieto] - Main.html

--- a/[Michel Prieto] - Main.html
+++ b/[Michel Prieto] - Main.html
@@ -2,15 +2,11 @@
 <!-- saved from url=(0030)https://10.120.121.3/index.cgi -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>[Michel Prieto] - Main</title>
-<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
 </head>
-
 <body>
 <table class="maintable" cellpadding="0" align="center" cellspacing="0">
   <tbody><tr>
     <td height="70">
-
-    <img src="./[Michel Prieto] - Main_files/P5B-300.gif" alt="PowerBeam M5 300">
     
     </td>
     <td valign="bottom" align="right">
@@ -20,27 +16,9 @@
   </tr>
   <tr class="menu">
     <td height="26" style="white-space: nowrap;">
-     <a href="https://10.120.121.3/ubnt.cgi"><img src="./[Michel Prieto] - Main_files/ubnt.png" alt="UBNT" border="0"></a><a href="https://10.120.121.3/index.cgi"><img src="./[Michel Prieto] - Main_files/main_top.png" alt="Main" border="0"></a><a href="https://10.120.121.3/link.cgi"><img src="./[Michel Prieto] - Main_files/link.png" alt="Wireless" border="0"></a><a href="https://10.120.121.3/network.cgi"><img src="./[Michel Prieto] - Main_files/net.png" alt="Network" border="0"></a><a href="https://10.120.121.3/advanced.cgi"><img src="./[Michel Prieto] - Main_files/4dv.png" alt="Advanced" border="0"></a><a href="https://10.120.121.3/services.cgi"><img src="./[Michel Prieto] - Main_files/srv.png" alt="Services" border="0"></a><a href="https://10.120.121.3/system.cgi"><img src="./[Michel Prieto] - Main_files/system.png" alt="System" border="0"></a></td>
 	<td align="right" valign="top" style="white-space: nowrap;">
 		<a id="unms_link" href="https://unms.com/">
-		<img id="unms_status_btn" class="unms_status" src="./[Michel Prieto] - Main_files/airos-unms-grey.png"></a>&nbsp;
-		<select id="tools" onchange="showTool(this);">
-			<option value="" selected="">Tools:</option>
-			<option value="signal_gui.cgi">Align Antenna...</option>
-			
-			<option value="survey.cgi?mode=tool">Site Survey...</option>
-			<option value="discovery.cgi">Discovery...</option>
-			
-			<option value="pingtest.cgi">Ping...</option>
-			<option value="traceroute.cgi">Traceroute...</option>
-			<option value="sptest.cgi">Speed Test...</option>
-			
-			<option value="airview.cgi">airView...</option>
-			
-		</select>&nbsp;<input type="button" value="Logout" onclick="window.location.href=&#39;/logout.cgi&#39;+&#39;?&#39;+(new Date().getTime());">
-    </td>
-  </tr>
-
+		<img id="unms_status_btn" class="unms_status" src="./[Michel Prieto] - Main_files/airos-unms-grey.png"></a>&nbsp
   <tr>
 <td colspan="2" class="centr">
 
@@ -255,32 +233,10 @@
 				<span class="value"><a href="https://10.120.121.3/mng_airgw.cgi" target="_blank">Connected (Click to manage)</a></span>
 			</div>
 		</div>
-		<div class="fieldset">
-		<div id="unms_info" class="row">
-			<span class="label">UNMS: <span class="help"><a id="unms_qm" href="https://10.120.121.3/200715.1626/help/en_US/unms.html" rel="help" class="unms_qm">[?]</a></span></span>
-			<span class="value">
-			<span id="unms_status">Disabled</span>
-			<span>&nbsp;</span>
-			</span>
-		</div>
 	   </div></div></div></div></td>
 	</tr>
 	<tr><td colspan="2">&nbsp;</td></tr>
-	<tr><th colspan="2">Monitor</th></tr>
-	<tr>
-	<td colspan="2" id="extrainfo">
-	<span id="throughputgraph" class="all"><a href="https://10.120.121.3/throughput.cgi" target="extraFrame" class="underline">Throughput</a> | </span><span id="stalist" class="apinfo initial_hide" style="display: none;"><a href="https://10.120.121.3/stalist.cgi" target="extraFrame">Stations</a> | </span><span id="stainfo" class="stainfo initial_hide" style="display: inline;"><a href="https://10.120.121.3/stainfo.cgi?ifname=ath0&amp;sta_mac=74:AC:B9:0E:C3:A1&amp;mode=ap" id="a_stainfo" name="a_stainfo" target="extraFrame">AP Information</a> | </span><span id="ifaces" class="all"><a href="https://10.120.121.3/ifaces.cgi" target="extraFrame">Interfaces</a> | </span><span id="ppp_info" class="router initial_hide" style="display: none;"><a href="https://10.120.121.3/pppinfo.cgi" target="extraFrame">PPPoE Information</a> | </span><span id="dhcpc_info" class="initial_hide" style="display: none;"><a href="https://10.120.121.3/dhcpc.cgi" target="extraFrame">DHCP Client</a> | </span><span id="arp" class="all"><a href="https://10.120.121.3/arp.cgi" target="extraFrame">ARP Table</a> | </span><span id="brmacs" class="bridge initial_hide" style="display: inline;"><a href="https://10.120.121.3/brmacs.cgi" target="extraFrame">Bridge Table</a> | </span><span id="sroutes" class="all"><a href="https://10.120.121.3/sroutes.cgi" target="extraFrame">Routes</a> | </span><span id="fwall" class="initial_hide" style="display: inline;"><a href="https://10.120.121.3/fw.cgi?netmode=bridge" id="a_fw" target="extraFrame">Firewall</a> | </span><span id="pfw" class="router initial_hide" style="display: none;"><a href="https://10.120.121.3/pfw.cgi" target="extraFrame">Port Forward</a> | </span><span id="dhcp_leases" class="router initial_hide" style="display: none;"><a href="https://10.120.121.3/leases.cgi" target="extraFrame">DHCP Leases</a> | </span><span id="satelites" class="gpsinfo initial_hide" style="display: none;"><a href="https://10.120.121.3/gpsstats.cgi" target="extraFrame">GPS Details</a> | </span><span id="nolinfo" class="all" style="display: none;"><a href="https://10.120.121.3/nolinfo.cgi" target="extraFrame">DFS Events</a> | </span><span id="log" class="all"><a href="https://10.120.121.3/log.cgi" target="extraFrame">Log</a></span>
-	</td>
-	</tr>
-	<tr>
-	<td colspan="2">
-<div id="extraFrame">
-
-
-<title>[Michel Prieto] - Throughput</title>
-<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
-
-<meta http-equiv="Pragma" content="no-cache">
+	
 <style type="text/css">
 
 .graph-border {
@@ -304,7 +260,7 @@
 
 
 
-<form  method="GET">
+<form>
 <table id="throughput">
 	<tfoot>
 		<tr>
@@ -313,7 +269,6 @@
 			</td>
 		</tr>
 	</tfoot>
-	<tbody><tr><td><span id="label0">WLAN0</span></td><td><span id="label1">LAN0</span></td></tr><tr><td><div class="graph-border"><div id="canvas0" class="graph-canvas" style="padding: 0px;"><canvas class="base" width="350" height="150"></canvas><canvas class="overlay" width="350" height="150" style="position: absolute; left: 0px; top: 0px;"></canvas><div class="tickLabels" style="font-size:smaller"><div class="xAxis x1Axis" style="color:#545454"></div><div class="yAxis y1Axis" style="color:#545454"><div class="tickLabel" style="position:absolute;text-align:right;top:138px;right:323px;width:27px">kbps 0</div><div class="tickLabel" style="position:absolute;text-align:right;top:121px;right:323px;width:27px">50</div><div class="tickLabel" style="position:absolute;text-align:right;top:103px;right:323px;width:27px">100</div><div class="tickLabel" style="position:absolute;text-align:right;top:86px;right:323px;width:27px">150</div><div class="tickLabel" style="position:absolute;text-align:right;top:69px;right:323px;width:27px">200</div><div class="tickLabel" style="position:absolute;text-align:right;top:51px;right:323px;width:27px">250</div><div class="tickLabel" style="position:absolute;text-align:right;top:34px;right:323px;width:27px">300</div><div class="tickLabel" style="position:absolute;text-align:right;top:16px;right:323px;width:27px">350</div><div class="tickLabel" style="position:absolute;text-align:right;top:-1px;right:323px;width:27px">400</div></div></div><div class="legend"><div style="position: absolute; width: 99px; height: 42px; top: 9px; left: 39px; background-color: rgb(255, 255, 255); opacity: 0.4;"> </div><table style="position:absolute;top:9px;left:39px;;font-size:smaller;color:#545454"><tbody><tr><td class="legendColorBox"><div style="border:1px solid #ccc;padding:1px"><div style="width:4px;height:0;border:5px solid #2389C6;overflow:hidden"></div></div></td><td class="legendLabel">RX: 40.2kbps</td></tr><tr><td class="legendColorBox"><div style="border:1px solid #ccc;padding:1px"><div style="width:4px;height:0;border:5px solid #FF0000;overflow:hidden"></div></div></td><td class="legendLabel">TX: 102kbps</td></tr></tbody></table></div></div></div></td><td><div class="graph-border"><div id="canvas1" class="graph-canvas" style="padding: 0px;"><canvas class="base" width="350" height="150"></canvas><canvas class="overlay" width="350" height="150" style="position: absolute; left: 0px; top: 0px;"></canvas><div class="tickLabels" style="font-size:smaller"><div class="xAxis x1Axis" style="color:#545454"></div><div class="yAxis y1Axis" style="color:#545454"><div class="tickLabel" style="position:absolute;text-align:right;top:138px;right:323px;width:27px">kbps 0</div><div class="tickLabel" style="position:absolute;text-align:right;top:118px;right:323px;width:27px">50</div><div class="tickLabel" style="position:absolute;text-align:right;top:98px;right:323px;width:27px">100</div><div class="tickLabel" style="position:absolute;text-align:right;top:78px;right:323px;width:27px">150</div><div class="tickLabel" style="position:absolute;text-align:right;top:59px;right:323px;width:27px">200</div><div class="tickLabel" style="position:absolute;text-align:right;top:39px;right:323px;width:27px">250</div><div class="tickLabel" style="position:absolute;text-align:right;top:19px;right:323px;width:27px">300</div><div class="tickLabel" style="position:absolute;text-align:right;top:-1px;right:323px;width:27px">350</div></div></div><div class="legend"><div style="position: absolute; width: 97px; height: 42px; top: 9px; left: 39px; background-color: rgb(255, 255, 255); opacity: 0.4;"> </div><table style="position:absolute;top:9px;left:39px;;font-size:smaller;color:#545454"><tbody><tr><td class="legendColorBox"><div style="border:1px solid #ccc;padding:1px"><div style="width:4px;height:0;border:5px solid #2389C6;overflow:hidden"></div></div></td><td class="legendLabel">RX: 621bps</td></tr><tr><td class="legendColorBox"><div style="border:1px solid #ccc;padding:1px"><div style="width:4px;height:0;border:5px solid #FF0000;overflow:hidden"></div></div></td><td class="legendLabel">TX: 3.43kbps</td></tr></tbody></table></div></div></div></td></tr></tbody>
 </table>
 </form>
 
@@ -331,34 +286,6 @@
                 <tbody><tr>
            		<td height="10" class="footlogo"><img src="https://10.120.121.3/glogo.cgi" border="0"></td>
 	           	<td height="10" class="foottext">
-				
-<script type="text/javascript" language="javascript">
-function handle_licensed(country)
-{
-	if (country == "511" || country == "2124")
-	{
-		$(".n_lfua").hide();
-		$(".lfua").css("display", "inline");
-	}
-	else
-	{
-		$(".lfua").hide();
-		$(".n_lfua").css("display", "inline");
-	}
-
-}
-
-$(document).ready(
-	function()
-	{
-		$("#country_select").change(function() { handle_licensed($(this).val()); } ).change();
-		$("#country").change(function() { handle_licensed($(this).val()); } ).change();
-	}
-);
-
-</script>
-Ubiquiti Networks <a href="https://10.120.121.3/200715.1626/help/en_US/legal_eula.html" onclick="return showLegalText(&quot;/200715.1626/help/en_US/legal_eula.html&quot;, &quot;Close&quot;)">EULA</a> and <a href="https://10.120.121.3/200715.1626/help/en_US/legal_privacy_policy.html" onclick="return showLegalText(&quot;/200715.1626/help/en_US/legal_privacy_policy.html&quot;, &quot;Close&quot;)">PRIVACY POLICY</a><br>
-				© Copyright 2006-2020 Ubiquiti Networks, Inc.
 			</td>
                 </tr>
                 </tbody></table>
